--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Youtube App Extension</title>
+    <title>Chrome App Extension</title>
     <script src="popup.js"></script>
     <link rel="stylesheet" href="popup.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
